Sat Dec 29 12:08:40 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Added new header files into the project.

Sat Dec 29 11:57:40 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Default_Constants.h: A new header file that houses some of
	  the constants that are used widely by ACE and applications based
	  on ACE. The motivation for this one is the same as that of
	  creating Global_Macros.h. 
	
	* ace/Global_Macros.h: Moved some constant definitions from this
	  file to Default_Constants.h.

	* ace/OS.h: Moved some constant definitions out of this
	  file. There are some more that needs moving and will be done
	  over a period of time hopefully. 

Sat Dec 29 06:31:50 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp (test_concurrent): Added an
	  ACE_UNUSED_ARG(connect_client) to silence complaints on certain
 	  compilers about unused arguments.

Sat Dec 29 12:54:45 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/C-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/C-inserver.cpp:
        * examples/Mem_Map/file-reverse/file-reverse.cpp:
        * examples/Reactor/Multicast/Log_Wrapper.cpp:
        * examples/Reactor/Multicast/server.cpp:
          Made these files compiling when ACE_USES_WCHAR is set

        * examples/Map_Manager/test_hash_map_manager.cpp:
          Made this file partly compiling when ACE_USES_WCHAR is set

Sat Dec 29 10:42:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * tests/SSL/Makefile.bor:
          Added SSL_LIB to lib files

Sat Dec 29 02:55:24 2001  Venkita Subramonian  <venkita@cs.wustl.edu>

	* ace/OS.i:
	  Fixed problem with idl compiler segmentation fault.
	  replaced
	  # if !defined ACE_LACKS_ENV
	  with
	  # if defined ACE_LACKS_ENV
	  in ACE_OS::strenvdup.

Fri Dec 28 16:01:58 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Global_Macros.h: Fixed a fuzz error.
